NOISSUE - Certs service refactor (#1369)
* remove owner id


* add certs mock


* remove not wanted changes


* refactor certs


* addint tests


* addint tests


* adding tests


* add certs test


* add certs test


* add cert test, remove default implementation


* fix default value for vault host


* add cert test, remove default implementation


* linter cleaning


* fix comments, and logging


* use mocks from other services


* rename struct and url path params


* resolve minor comments


* resolve comments


* align url params naming


* resolve comments


* resolve comments


* fix typo


* resolve comments


* remove struct revoke


* refactor certRes
