# certs/openapi.yml
@@ -22,7 +22,7 @@ paths:
           description: Failed due to malformed JSON.
         '500':
           description: Unexpected server-side error ocurred.
-  /certs/{thingID}:
+  /certs/{thingId}:
     get:
       summary: Retrieves certificates
       description: |
@@ -40,16 +40,16 @@ paths:
             Failed to retrieve corresponding certificate.
         '500':
           $ref: "#/components/responses/ServiceError"
-  /certs/revoke:
+  /certs/{certId}:
     delete:
       summary: Revokes certificate
       description: |
-        Revokes a certificates for given thing ID .
+        Revokes a certificates for given cert ID .
       tags:
         - configs
       parameters:
         - $ref: "#/components/parameters/Authorization"
-        - $ref: "#/components/parameters/ThingID"
+        - $ref: "#/components/parameters/CertID"
       responses:
         '200':
           $ref: "#/components/responses/RevokeRes"
@@ -71,6 +71,14 @@ components:
     ThingID:
       name: thingID
       description: Thing ID
+      in: path
+      schema:
+        type: string
+        format: uuid
+      required: true
+    CertID:
+      name: certID
+      description: Serial of certificate
       in: path
       schema:
         type: string
